welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value couleurdelacase
      couleurdelacase= getCouleurSol()
      ^SlugTracking:7: error: not found: value couleurDeLaCase
      couleurDeLaCase match{
      ^SlugTracking:10: error: value grey is not a member of object java.awt.Color
        case Color.grey => return false
                   ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
        case _ =>
               ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur==false){
  ^